--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,14 @@
     <title>Title</title>
 
     {% block css %}{% endblock css %}
+
 </head>
 <body>
-{% block content %}{% endblock content %}
+
+{% block content %}
+    <h1>{{ hello_world }}</h1>
+{% endblock content %}
+
 {% block js %}{% endblock js %}
 </body>
 </html>
