add base user profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load bootstrap4 static %}
+
     <meta charset="UTF-8">
     <title>Title</title>
 
-    {% load bootstrap4 %}
     {% bootstrap_css %}
-
     {% block css %}{% endblock css %}
-
-    {% bootstrap_javascript jquery='full' %}
 
 </head>
 <body>
+
 {% block navbar %}
     {% include 'navbar.html' %}
 {% endblock navbar %}
 
+{% block sidebar %}
+{% endblock sidebar %}
+
 {% block content %}
-    <h1>{{ hello_world }}</h1>
 {% endblock content %}
 
+{% bootstrap_javascript jquery='full' %}
 {% block js %}{% endblock js %}
 </body>
 </html>
